some alignment fixes and removed 2 links to html pages

--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,7 @@ body h2 {
 }
 
 .header {
-	/*background-color: #A1E0BBFF;*/
+/*	background-color: #A1E0BBFF;*/
 	background-color: transparent;
 	margin-bottom: -2rem;
 	padding-top: 0.5rem;
@@ -62,6 +62,10 @@ table {
 	display: inline-block;
 }
 
+#feat_03 {
+	margin-top: -15px;
+}
+
 #feat_06 {
 	padding-top: 0px;
 }
@@ -76,19 +80,19 @@ table {
 	overflow: hidden;
 }
 
+
 /*#feat_09 p{
 	text-decoration-line: underline;
 }*/
 
-hr {
+/*hr {
 	color:#000000;
 	background-color:#000000;
 	width: 25%;
 	height:0px;
 	text-align:left;
 	margin: 0 auto 0 0;
-}
-/*
+}*/
 
 /*
 .container{
