--- a/css/style4.css
+++ b/css/style4.css
@@ -6,7 +6,6 @@ body {
 	margin: 0;
 }
 
-/* Style the header */
 .header {
 	background-color: #f1f1f1;
 	padding: 20px;
@@ -26,14 +25,18 @@ body {
 	width: 90px;
 	color: #f2f2f2;
 	text-align: center;
-	padding: 14px 16px;
 	text-decoration: none;
+	padding: 10px 10px;
 }
 
 /* Change color on hover */
 .topnav a:hover {
 	background-color: #ddd;
 	color: black;
+}
+
+#h3a {
+	text-align: center;
 }
 
 /* Create three equal columns that floats 
